# AIVIANIA

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.yml  docker-compose.yml
.github/workflows/: ci.yml  integration-docker-compose.yml  release-assets.yml  release-on-tag.yml
deploy/: install.sh
deploy/logrotate/: aiviania
deploy/nginx/: aiviania.conf
deploy/prometheus/: scrape_aiviania.yml
deploy/systemd/: aiviania.env  aiviania.service
examples/: ai_ml_example.rs  basic_features_demo.rs  cache_example.rs  database_example.rs  email_graphql_oauth_example.rs  integration_demo.rs  jobs_example.rs  main.rs  metrics_example.rs  professional_example.rs  security_example.rs  security_integration.rs  session_example.rs  upload_example.rs  websocket_rate_limit_openapi_example.rs
examples/disabled/: email_graphql_oauth_example.rs
src/: auth.rs  blockchain.rs  body_buffer.rs  body_buffer_middleware.rs  cache.rs  config.rs  database.rs  docs.rs  email.rs  errors.rs  graphql.rs  jobs.rs  lib.rs  main.rs  metrics.rs  middleware.rs  oauth.rs  openapi.rs  plugin.rs  rate_limit.rs  redis_cache.rs  redis_rate_limit.rs  request.rs  response.rs  router.rs  security_example.rs  server.rs  session.rs  upload.rs  websocket.rs
src/ai_ml/: config.rs  inference.rs  metrics.rs  mod.rs  model.rs  pipeline.rs  registry.rs
src/auth/: compat.rs  jwt.rs  middleware.rs  mod.rs  models.rs  password.rs  rbac.rs  session.rs
src/cache/: backends.rs  config.rs  middleware.rs  mod.rs
src/database/: migrations.rs  mongo.rs  mysql.rs  postgres.rs  repositories.rs  sqlite.rs
src/database/backends/: mod.rs  mongo.rs  mysql.rs  postgres.rs  sqlite.rs
src/middleware/: rate_limit_middleware.rs
src/middleware_ext/: mod.rs  rate_limit_middleware.rs
src/observability/: middleware.rs  mod.rs
src/security/: config.rs  cors.rs  csrf.rs  events.rs  headers.rs  mod.rs  validation.rs
templates/: graphql_playground.html  password_reset.html  verification.html  welcome.html
tests/: integration.rs  integration_full.rs  security_integration.rs  security_tests.rs
unit/test/: test_login.js
