[package]
name = "aiviania"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
async-trait = "0.1"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"] }
argon2 = { version = "0.5", features = ["std"] }
bytes = "1.0"
http-body-util = "0.1"
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
sha1 = "0.10"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
