[package]
name = "aiviania"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
async-trait = "0.1"
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-rusqlite = { version = "0.6.0", features = ["bundled"], optional = true }
rusqlite = { version = "0.32", optional = true }
tokio-postgres = { version = "0.7", optional = true }
mysql_async = { version = "0.34", optional = true }
mongodb = { version = "2.8", optional = true }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
bytes = "1.0"
http-body-util = "0.1"
tokio-tungstenite = "0.21"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
sha1 = "0.10"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json"] }
config = "0.14"
serde_yaml = "0.9"
dotenvy = "0.15"
prometheus = "0.14"
once_cell = "1.20"
thiserror = "1.0"
redis = { version = "0.22", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sqlx = { package = "sqlx", version = "0.7", optional = true, default-features = false, features = ["runtime-tokio-rustls", "macros"] }
web3 = { version = "0.19", default-features = false, features = ["http-tls"] }
utoipa = { version = "4", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "6", features = ["axum"], optional = true }
axum = "0.7"
uuid = { version = "1.0", features = ["v4"] }
cookie = "0.18"
futures = "0.3"
multer = "3.0"
tempfile = "3.0"
mime_guess = "2.0"
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.4"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
handlebars = "5.1"
async-graphql = { version = "7.0", features = ["chrono", "uuid", "string_number"] }
async-graphql-axum = "7.0"
oauth2 = { version = "4.4", features = ["reqwest"] }
url = "2.5"
regex = "1.10"
serde_urlencoded = "0.7"

[features]
default = []
redis = ["dep:redis"]
cache = ["redis"]
ai_ml = []
sqlx = ["dep:sqlx"]
postgres = ["dep:sqlx", "sqlx/postgres", "dep:tokio-postgres"]
mysql = ["dep:sqlx", "sqlx/mysql", "dep:mysql_async"]
sqlite = ["dep:tokio-rusqlite", "dep:rusqlite"]
mongodb = ["dep:mongodb"]
utoipa = ["dep:utoipa", "dep:utoipa-swagger-ui"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
